--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-slick": "^0.31.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
